--- a/package.json
+++ b/package.json
@@ -3,23 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",                 
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@prisma/client": "^6.12.0",
-    "@tailwindcss/cli": "^4.1.11",
     "next": "15.4.2",
     "next-auth": "^4.24.11",
-    "prisma": "^6.12.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.1.11",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -28,7 +24,9 @@
     "eslint-config-next": "15.4.2",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
-    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
+  },
+  "resolutions": {
+    "lightningcss": "1.23.0"
   }
 }
