--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@prisma/client": "^6.12.0",
+    "@tailwindcss/cli": "^4.1.11",
+    "lightningcss": "^1.30.1",
     "next": "15.4.2",
     "next-auth": "^4.24.11",
+    "prisma": "^6.12.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
